; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..coresdynamic_dummy.c_libretro_dummy_retro_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..coresdynamic_dummy.c_libretro_dummy_retro_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@frame_buf_width = common dso_local global i32 0, align 4
@frame_buf_height = common dso_local global i32 0, align 4
@dummy_frame_buf = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libretro_dummy_retro_init() #0 {
  %1 = alloca i32, align 4
  store i32 320, i32* @frame_buf_width, align 4
  store i32 240, i32* @frame_buf_height, align 4
  %2 = load i32, i32* @frame_buf_width, align 4
  %3 = load i32, i32* @frame_buf_height, align 4
  %4 = mul nsw i32 %2, %3
  %5 = call i64 @calloc(i32 %4, i32 4)
  %6 = inttoptr i64 %5 to i32*
  store i32* %6, i32** @dummy_frame_buf, align 8
  store i32 0, i32* %1, align 4
  br label %7

7:                                                ; preds = %18, %0
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @frame_buf_width, align 4
  %10 = load i32, i32* @frame_buf_height, align 4
  %11 = mul nsw i32 %9, %10
  %12 = icmp ult i32 %8, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %7
  %14 = load i32*, i32** @dummy_frame_buf, align 8
  %15 = load i32, i32* %1, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  store i32 128, i32* %17, align 4
  br label %18

18:                                               ; preds = %13
  %19 = load i32, i32* %1, align 4
  %20 = add i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %7

21:                                               ; preds = %7
  ret void
}

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
